--- a/graphcool.yml
+++ b/graphcool.yml
@@ -32,6 +32,12 @@ functions:
     schema: src/email-password/loggedInUser.graphql
     handler:
       code: src/email-password/loggedInUser.ts
+
+  # newChatroom:
+  #   type: resolver
+  #   schema: src/newChatroom/newChatroom.graphql
+  #   handler:
+  #     code: src/newChatroom/newChatroom.ts
 #
 
 permissions:
