--- a/graphcool.yml
+++ b/graphcool.yml
@@ -33,6 +33,12 @@ functions:
     handler:
       code: src/email-password/loggedInUser.ts
 
+  verifyUser:
+    type: resolver
+    schema: src/email-password/verifyUser.graphql
+    handler:
+      code: src/email-password/verifyUser.ts
+
   # newChatroom:
   #   type: resolver
   #   schema: src/newChatroom/newChatroom.graphql
